--- a/index.html
+++ b/index.html
@@ -31,20 +31,40 @@
         </div>
         <div class="search">
             <form action="">
-                <label for="search" ></label>
-                <input type="text" name="search" placeholder="جستجو">
+                <label for="search" >
+                    <svg xmlns:xlink="http://www.w3.org/1999/xlink" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24"  height="24" ><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z" fill="#9AA0A6"></path></svg>
+                </label>
+                <input type="text" name="search" placeholder="جستجو" id="search">
             </form>
         </div>
 
     </div>
     <!-- right end  -->
-    <div class="left"></div>
+    <!-- left start -->
+    <div class="left">
+        <a href="">
+            <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" style="width: 24px; height: 24px; fill: var(--color-icon-high-emphasis);" width="24"  height="24" ><defs><symbol id="registerationSignIn" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M16 15h-2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V7a2 2 0 012-2h6a2 2 0 012 2v2h2V7a4 4 0 00-4-4H6a4 4 0 00-4 4v10a4 4 0 004 4h6a4 4 0 004-4v-2zm6-4H9.414l2.293-2.293-1.414-1.414-4 4a1 1 0 000 1.414l4 4 1.414-1.414L9.414 13H22v-2z" clip-rule="evenodd"></path></symbol></defs><use xlink:href="#registerationSignIn" fill="#424750"></use></svg>
+                       ورود|ثبت نام
+
+        </a>
+
+        <span></span>
+
+        <div class="logo">
+            <a href="">
+                <svg xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" style="width: 24px; height: 24px; fill: var(--color-icon-high-emphasis);" width="24"  height="24" ><defs><symbol id="cartOff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M20 4h2V2h-3a1 1 0 00-1 1v1H3a1 1 0 00-.995 1.1l1 10A1 1 0 004 16h15a1 1 0 001-1V4zm-2 17a2 2 0 110-4 2 2 0 010 4zM5 21a2 2 0 110-4 2 2 0 010 4zm13-7V6H4.105l.8 8H18z" clip-rule="evenodd"></path></symbol></defs><use xlink:href="#cartOff" fill="#424750"></use></svg>
+            </a>
+        </div>
+
+    </div>
+    <!-- left end -->
 
 </div>
 <!-- top end -->
 
 <!-- bottom start -->
 <div class="bottom">
+    
 
 </div>
 <!-- bottom end -->
